# dinn_demo

./: CMakeLists.txt  README.md
src/: dinn_demo.cpp
src/libs/ubuntu/include/hesea/core/: config_core.h
src/libs/ubuntu/lib/: libHESEAbinfhe.so.1  libHESEAbinfhe.so.1.11.9  libHESEAcore.so.1  libHESEAcore.so.1.11.9  libHESEApke.so.1
src/libs/ubuntu/lib/hesea/: HESeaConfig.cmake  HESeaConfigVersion.cmake  HESeaTargets-release.cmake  HESeaTargets.cmake
